# udcn3

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  benchmark_results.json  build-all.sh  build.rs  comprehensive-test.sh  docker-compose.yml  docker-entrypoint.sh  received-file.txt  received.txt  received_large.txt  runtime-test.sh  rust-toolchain.toml  setup-multi-node.sh  small-test.txt  test-docker-networking.sh  test-file.txt  test-networking.sh  test-quic.txt  test.md  test.txt  test_framing  test_framing.rs  test_large_file.rs  test_small.txt  topology_linear_10_nodes.dot  topology_simulation_linear_10_nodes.json  verifier-test.sh
.cargo/: config.toml
.claude/commands/: taskmaster-complete.md
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: architecture.md  code_style_conventions.md  codebase_structure.md  configuration_files.md  project_overview.md  project_purpose.md  suggested_commands.md  system_commands.md  task_completion_workflow.md  tech_stack.md  testing_framework.md
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  tasks.json
config/: NETWORKING.md  bench.conf  node1.conf  node1.conf.backup  node2.conf  node2.conf.backup  node3.conf  node3.conf.backup
config/nginx/: udcn-lb.conf
udcn/: Cargo.toml  build.rs
udcn-bench/: Cargo.toml  benchmark_results.json  topology_linear_10_nodes.dot  topology_mesh_8_nodes.dot  topology_simulation_linear_10_nodes.json  topology_simulation_mesh_8_nodes.json  topology_simulation_tree_15_nodes.json  topology_tree_15_nodes.dot
udcn-bench/benches/: network_bench.rs  transport_bench.rs
udcn-bench/src/: benchmarks.rs  main.rs  reporter.rs  topology.rs  traffic_generator.rs  utils.rs
udcn-cli/: Cargo.toml
udcn-cli/src/: commands.rs  daemon_client.rs  file_transfer.rs  main.rs  node_manager.rs  utils.rs
udcn-common/: Cargo.toml
udcn-common/src/: lib.rs
udcn-core/: Cargo.toml
udcn-core/src/: lib.rs  name.rs  network.rs  packets.rs  protocol.rs  security.rs  signature.rs  tlv.rs
udcn-ebpf/: Cargo.toml
udcn-ebpf/src/: lib.rs  main.rs
udcn-transport/: Cargo.toml
udcn-transport/examples/: concurrent_server_demo.rs  concurrent_transport_demo.rs  data_publication_demo.rs  file_chunking_demo.rs  large_file_demo.rs  progress_tracking_demo.rs
udcn-transport/src/: concurrent_server.rs  concurrent_transport.rs  data_publisher.rs  data_reception_handler.rs  data_response_handler.rs  file_chunking.rs  file_integrity.rs  file_interest_generator.rs  file_reassembly.rs  fragmented_transport.rs  framing.rs  lib.rs  ndn_forwarding.rs  ndn_optimizations.rs  ndn_performance.rs  ndn_quic.rs  packet_fragmentation.rs  packet_reassembly.rs  pipeline_coordinator.rs  progress_tracker.rs  quic.rs  quic_pool.rs  stream_multiplexer.rs  tcp.rs  udp.rs  unix.rs
udcn/src/: main.rs  stats.rs
udcn_content_store/: content_store.json  metadata.json
udcn_content_store/backups/: content_store_backup_1752315783.json  content_store_backup_1752315807.json  content_store_backup_1752315813.json
udcnd/: Cargo.toml  build.rs
udcnd/src/: config.rs  control_plane.rs  daemon.rs  ebpf.rs  face_manager.rs  main.rs  packet_handler.rs  persistent_content_store.rs  routing.rs  service.rs  transport_manager.rs
udcnd/src/protocols/: mod.rs  ndn_ospf.rs
