[package]
name = "udcn-cli"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "udcn"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }

udcn-common = { path = "../udcn-common" }
udcn-core = { path = "../udcn-core" }
udcn-transport = { path = "../udcn-transport" }