[package]
name = "udcn-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
libc = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

udcn-common = { path = "../udcn-common" }