[package]
name = "udcn-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
libc = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
sha2 = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
ed25519-dalek = "2.1"
x509-parser = "0.15"
ring = "0.17"
rustls-pemfile = "1.0"

udcn-common = { path = "../udcn-common" }