[package]
name = "udcnd"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "udcnd"
path = "src/main.rs"

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
libc = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
async-trait = "0.1"
toml = "0.8"
tracing = "0.1"
thiserror = "1.0"
futures = "0.3"
notify = "6.0"
quinn = "0.10"

udcn-common = { path = "../udcn-common", features = ["user"] }
udcn-core = { path = "../udcn-core" }
udcn-transport = { path = "../udcn-transport" }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
udcn-ebpf = { path = "../udcn-ebpf" }